--- a/frontend/index.html
+++ b/frontend/index.html
@@ -96,7 +96,7 @@
 <button
   id="tutorToggleBtn"
   onclick="toggleTutorChat()"
-  class="fixed bottom-6 right-6 bg-purple-500 text-white p-4 rounded-full shadow-lg z-50 transition-all duration-300 hover:scale-110 hover:rotate-6"
+  class="fixed bottom-6 right-6 bg-blue-600 text-white p-4 rounded-full shadow-lg z-50 transition-all duration-300 hover:scale-110 hover:rotate-6"
 >
   <i class="fa-solid fa-robot text-xl"></i>
 </button>
@@ -107,7 +107,7 @@
   class="fixed bottom-24 right-6 w-80 bg-white rounded-2xl shadow-2xl border border-gray-200 flex flex-col overflow-hidden z-50 opacity-0 scale-95 pointer-events-none transition-all duration-300"
 >
   <!-- Header -->
-  <div class="bg-purple-500 text-white p-4 flex justify-between items-center">
+  <div class="bg-purple-600 text-white p-4 flex justify-between items-center shrink-0">
     <h4 class="font-semibold">AI Tutor 🤖</h4>
     <button onclick="toggleTutorChat()">
       <i class="fa-solid fa-xmark"></i>
